--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "generator-html5Flexbox",
   "version": "0.0.1",
   "description": "The most basic html5 project ever featuring flexbox, javascript and nothing else.",
+  "author": "Elehisie",
+  "author-email": "elehisie@gmail.com",
   "files": [
     "app"
   ],
   "keywords": ["yeoman-generator"],
   "dependencies": {
     "yeoman-generator": "^0.24.1"
+  },
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/Elehisie/generator-html5Flexbox.git"
   }
 }
