--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "yeoman-generator": "^0.24.1"
   },
-  { "license" : "MIT" },
+  "license": "MIT",
   "repository" :
   { "type" : "git"
   , "url" : "https://github.com/Elehisie/generator-html5Flexbox.git"
